[2023-10-09_23:20] pacman install/remove hook

--- a/eww/bar/bar.scss
+++ b/eww/bar/bar.scss
@@ -1,4 +1,11 @@
-box {
-  background-color: red;
-  color: white;
+.bar {
+  margin-top: 10px;
+  padding: 8px 16px;
+  background-color: #111517;
+
+  font-family: Maple Mono;
+  color: #f5ba4b;
+
+  border-radius: 16px;
+
 }
